tdf#53290 srchdlg: only set SearchItem RegExp if button is visible

Draw and Impress were using the user options
to enable searching as a regular expression
even though the dialog tried to avoid that
by not making the regex checkbox available.

Now, we don't want to affect the user options,
so we can't just set the checkbox to false.

Change-Id: I0c3797368669099ace1fb2080da9f11fb07d7949
Signed-off-by: Miklos Vajna <vmiklos@collabora.com>
Reviewed-on: https://gerrit.collaboraoffice.com/c/online/+/12471
Tested-by: Jenkins CPCI <releng@collaboraoffice.com>